fix wrap

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -159,6 +159,8 @@
       @include screen-max-width-767 {
         margin-top: 32px;
         text-align: left;
+        word-break: break-word;
+
       }
     }
 
